--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,28 @@
-zstandard
-pandas
-praw
-tqdm
+numpy>=1.20.0
+pandas>=1.3.0
+matplotlib>=3.4.0
+seaborn>=0.11.0
+nltk>=3.6.0
+spacy>=3.2.0
+transformers>=4.15.0
+torch>=1.10.0
+scikit-learn>=1.0.0
+praw>=7.5.0
+python-dotenv>=0.19.0
+requests>=2.26.0
+beautifulsoup4>=4.10.0
+jupyter>=1.0.0
+notebook>=6.4.0
+tqdm>=4.62.0
+plotly>=5.5.0
+wordcloud>=1.8.0
+gensim>=4.1.0
+networkx>=2.6.0
+pycountry>=20.7.3
+langdetect>=1.0.9
+streamlit>=1.5.0
+pytest>=6.2.5
+black>=21.12b0
+isort>=5.10.0
+flake8>=4.0.0
+python-dateutil>=2.8.2
